[package]
name = "bili"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
phf = { version = "0.12.1", features = ["macros"] }
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

[workspace] # so that it is not included in the upper workspace

